Issue #3221016: Fieldset with dark mode results in hard-to-read text

--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -313,6 +313,7 @@ $maxWidth: 520px;
 
 // Fieldgroup
 fieldset:not(.fieldgroup) {
+  color: var(--colorGinTextLight);
   padding-top: 8px;
   padding-left: 0;
   padding-right: 0;
